VisualForcePage/src/objects/bill_2__c.object
<CustomObject>
    <fields>
        <fullName>Bill_Name__c</fullName>
        <label>Bill Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Bill__c</fullName>
        <label>Total Bill</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <label>description</label>
        <type>TextArea</type>
    </fields>
    <label>bill 2</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Bill number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bill 2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>